--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <p>Hello</p>
-<p>很高兴你来到这里, 你可以在以下的网站找到我</p>
+<p>My website</p>
 
 <ul>
   <li> <a href="https://github.com/plumseed">Github</a> </li>
