--- a/index.html
+++ b/index.html
@@ -5,3 +5,6 @@
   <li> <a href="https://github.com/plumseed">Github</a> </li>
   <li> <a href="https://plumseed.github.io">Plumseed</a> </li>
 </ul>
+
+<script src="/live2dw/lib/L2Dwidget.min.js?094cbace49a39548bed64abff5988b05"></script><script>L2Dwidget.init({"pluginRootPath":"live2dw/","pluginJsPath":"lib/","pluginModelPath":"assets/","tagMode":false,"log":false,"model":{"jsonPath":"/live2dw/assets/haru01.model.json"},"display":{"position":"left","width":250,"height":400},"mobile":{"show":false}});</script></body>
+</html>
