--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
       <div class="site-overview-wrap sidebar-panel">
         <div class="site-author motion-element" itemprop="author" itemscope itemtype="http://schema.org/Person">
     <img class="site-author-image" itemprop="image"
-      src="/images/avatar_128.ico" 
-      alt="murphypei">
+      src="/images/doraemon.ico" 
+      alt="plumseed">
 <!--这里是murphypei图片的代码-->
   <p class="site-author-name" itemprop="name">murphypei</p>
   <div class="site-description" itemprop="description">虚怀若谷，大智若愚</div>
