--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
       src="/images/doraemon.ico" 
       alt="plumseed">
 <!--这里是murphypei图片的代码-->
-  <p class="site-author-name" itemprop="name">murphypei</p>
+  <p class="site-author-name" itemprop="name">plumseed</p>
   <div class="site-description" itemprop="description">虚怀若谷，大智若愚</div>
 </div>
 	  
@@ -263,7 +263,7 @@
 
     <footer id="footer" class="footer">
       <div class="footer-inner">
-        <div class="copyright">&copy; <span itemprop="copyrightYear">2022</span>
+        <div class="copyright">&copy; <span itemprop="copyrightYear">2023</span>
   <span class="with-love" id="animate">
     <i class="fa fa-user"></i>
   </span>
