--- a/index.html
+++ b/index.html
@@ -12,8 +12,24 @@
 
 
 
-
-
+<div class="bjimg"></div>
+.bjimg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%
+  min-width: 1000px;
+  z-index: -10;
+  zoom: 1;
+  background-color: #fff;
+  background-image: url(/images/fuumi.jpg) ;
+  background-repeat: no-repeat;
+  background-size: cover;
+  -webkit-background-size: cover;
+  -o-background-size: cover;
+  background-position: center 0;
+}
 
 
 
