--- a/index.html
+++ b/index.html
@@ -1,3 +1,34 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <style type="text/css">
+    body {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      min-width: 1000px;
+      background-color: #fff;
+      background: url(./images/fuumi.jpg);
+      background-repeat: no-repeat;
+      background-size: cover;
+      -webkit-background-size: cover;
+      -o-background-size: cover;
+      background-position: center 0;
+    }
+  </style>
+  </head>
+</html>
+
+
+
+
+
+
+
+
 <p>Hello</p>
 <p>My website</p>
 
@@ -12,24 +43,6 @@
 
 
 
-<div class="bjimg"></div>
-.bjimg {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%
-  min-width: 1000px;
-  z-index: -10;
-  zoom: 1;
-  background-color: #fff;
-  background-image: url(/images/fuumi.jpg) ;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -o-background-size: cover;
-  background-position: center 0;
-}
 
 
 
