--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       min-width: 1000px;
       background-color: #fff;
       background: url(./images/fuumi.jpg);
-      background-repeat: no-repeat;
+      background-repeat: repeat-y;
       background-size: cover;
       -webkit-background-size: cover;
       -o-background-size: cover;
