--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
       min-width: 1000px;
       background-color: #fff;
       background: url(./images/fuumi.jpg);
-      background-repeat: repeat-y;
+      background-repeat: no-repeat;
       background-size: cover;
       -webkit-background-size: cover;
       -o-background-size: cover;
       background-position: center 0;
+      background-attachment: fixed;
     }
   </style>
   </head>
