--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
 
 
+<body style="overflow:scroll">
 
 
 
@@ -349,3 +350,6 @@
 <script src="/js/schemes/muse.js?v=7.3.0"></script>
 
 <script src="/js/next-boot.js?v=7.3.0"></script>
+
+
+</body>
